testsuite/tests/typecheck/should_fail/T15527.stderr

T15527.hs:5:6: error: [GHC-23482]
    Illegal visible type application: @Int
    Suggested fix:
      Perhaps you intended to use the ‘TypeApplications’ extension
